--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,82 @@
+argcomplete==3.6.2 ; python_version >= "3.11" and python_version < "4.0"
+attrs==25.3.0 ; python_version >= "3.11" and python_version < "4.0"
 blinker==1.9.0 ; python_version >= "3.11" and python_version < "4.0"
+boltons==21.0.0 ; python_version >= "3.11" and python_version < "4.0"
+bracex==2.5.post1 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2025.1.31 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.17.1 ; python_version >= "3.11" and python_version < "4.0" and platform_python_implementation != "PyPy"
+charset-normalizer==3.4.1 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.8 ; python_version >= "3.11" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
-cryptography==44.0.1 ; python_version >= "3.11" and python_version < "4.0"
+click-option-group==0.5.7 ; python_version >= "3.11" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0"
+colorlog==6.9.0 ; python_version >= "3.11" and python_version < "4.0"
+cryptography==44.0.2 ; python_version >= "3.11" and python_version < "4.0"
+defusedxml==0.7.1 ; python_version >= "3.11" and python_version < "4.0"
+dependency-groups==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
 deprecated==1.2.18 ; python_version >= "3.11" and python_version < "4.0"
-flask==3.0.3 ; python_version >= "3.11" and python_version < "4.0"
+distlib==0.3.9 ; python_version >= "3.11" and python_version < "4.0"
+exceptiongroup==1.2.2 ; python_version >= "3.11" and python_version < "4.0"
+face==24.0.0 ; python_version >= "3.11" and python_version < "4.0"
+filelock==3.16.1 ; python_version >= "3.11" and python_version < "4.0"
+flask==3.1.0 ; python_version >= "3.11" and python_version < "4.0"
 flask-limiter==3.5.0 ; python_version >= "3.11" and python_version < "4.0"
 flask-sqlalchemy==3.1.1 ; python_version >= "3.11" and python_version < "4.0"
-greenlet==3.1.1 ; python_version >= "3.11" and python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+glom==22.1.0 ; python_version >= "3.11" and python_version < "4.0"
+googleapis-common-protos==1.70.0 ; python_version >= "3.11" and python_version < "4.0"
+greenlet==3.2.0 ; python_version >= "3.11" and python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 gunicorn==23.0.0 ; python_version >= "3.11" and python_version < "4.0"
+idna==3.10 ; python_version >= "3.11" and python_version < "4.0"
+importlib-metadata==7.1.0 ; python_version >= "3.11" and python_version < "4.0"
 itsdangerous==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
 jinja2==3.1.6 ; python_version >= "3.11" and python_version < "4.0"
-limits==4.6 ; python_version >= "3.11" and python_version < "4.0"
+jsonschema==4.23.0 ; python_version >= "3.11" and python_version < "4.0"
+jsonschema-specifications==2024.10.1 ; python_version >= "3.11" and python_version < "4.0"
+limits==5.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==3.0.2 ; python_version >= "3.11" and python_version < "4.0"
 marshmallow==3.21.2 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
+nox==2025.2.9 ; python_version >= "3.11" and python_version < "4.0"
 nulltype==2.3.1 ; python_version >= "3.11" and python_version < "4.0"
+opentelemetry-api==1.25.0 ; python_version >= "3.11" and python_version < "4.0"
+opentelemetry-exporter-otlp-proto-common==1.25.0 ; python_version >= "3.11" and python_version < "4.0"
+opentelemetry-exporter-otlp-proto-http==1.25.0 ; python_version >= "3.11" and python_version < "4.0"
+opentelemetry-instrumentation==0.46b0 ; python_version >= "3.11" and python_version < "4.0"
+opentelemetry-instrumentation-requests==0.46b0 ; python_version >= "3.11" and python_version < "4.0"
+opentelemetry-proto==1.25.0 ; python_version >= "3.11" and python_version < "4.0"
+opentelemetry-sdk==1.25.0 ; python_version >= "3.11" and python_version < "4.0"
+opentelemetry-semantic-conventions==0.46b0 ; python_version >= "3.11" and python_version < "4.0"
+opentelemetry-util-http==0.46b0 ; python_version >= "3.11" and python_version < "4.0"
 ordered-set==4.1.0 ; python_version >= "3.11" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.11" and python_version < "4.0"
-plaid-python==15.5.0 ; python_version >= "3.11" and python_version < "4.0"
+peewee==3.17.9 ; python_version >= "3.11" and python_version < "4.0"
+plaid-python==30.0.0 ; python_version >= "3.11" and python_version < "4.0"
+platformdirs==4.3.7 ; python_version >= "3.11" and python_version < "4.0"
+protobuf==4.25.6 ; python_version >= "3.11" and python_version < "4.0"
 psycopg==3.1.18 ; python_version >= "3.11" and python_version < "4.0"
 psycopg-binary==3.1.18 ; python_version >= "3.11" and python_version < "4.0" and implementation_name != "pypy"
 pycparser==2.22 ; python_version >= "3.11" and python_version < "4.0" and platform_python_implementation != "PyPy"
 pygments==2.19.1 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "4.0"
-python-dotenv==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
+python-dotenv==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
-rich==13.9.4 ; python_version >= "3.11" and python_version < "4.0"
-sentry-sdk==2.8.0 ; python_version >= "3.11" and python_version < "4.0"
+referencing==0.36.2 ; python_version >= "3.11" and python_version < "4.0"
+requests==2.32.3 ; python_version >= "3.11" and python_version < "4.0"
+rich==13.5.3 ; python_version >= "3.11" and python_version < "4.0"
+rpds-py==0.24.0 ; python_version >= "3.11" and python_version < "4.0"
+ruamel-yaml==0.18.10 ; python_version >= "3.11" and python_version < "4.0"
+ruamel-yaml-clib==0.2.12 ; python_version >= "3.11" and python_version < "3.13" and platform_python_implementation == "CPython"
+semgrep==1.120.0 ; python_version >= "3.11" and python_version < "4.0"
+sentry-sdk==2.25.1 ; python_version >= "3.11" and python_version < "4.0"
+setuptools==78.1.0 ; python_version >= "3.11" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.40 ; python_version >= "3.11" and python_version < "4.0"
-typing-extensions==4.13.1 ; python_version >= "3.11" and python_version < "4.0"
+tomli==2.0.2 ; python_version >= "3.11" and python_version < "4.0"
+typing-extensions==4.13.2 ; python_version >= "3.11" and python_version < "4.0"
 tzdata==2025.2 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
-urllib3==2.3.0 ; python_version >= "3.11" and python_version < "4.0"
+urllib3==2.4.0 ; python_version >= "3.11" and python_version < "4.0"
+virtualenv==20.30.0 ; python_version >= "3.11" and python_version < "4.0"
+wcmatch==8.5.2 ; python_version >= "3.11" and python_version < "4.0"
 werkzeug==3.1.3 ; python_version >= "3.11" and python_version < "4.0"
 wrapt==1.17.2 ; python_version >= "3.11" and python_version < "4.0"
+zipp==3.21.0 ; python_version >= "3.11" and python_version < "4.0"
