--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,43 +1,55 @@
-# name = gh-pages.yml
-# description = GitHub workflow that builds and deploys project documentation to GitHub Pages
-# category = maintainability
-# usage = Automatically triggered when code is pushed to the main branch
-# behavior = Builds Sphinx HTML documentation and deploys it to the gh-pages branch
-# inputs = Project source code and documentation files
-# outputs = HTML documentation published to GitHub Pages
-# dependencies = Sphinx, peaceiris/actions-gh-pages action
-# author = LedgerBase Team
-# last_modified = 2023-11-15
-# changelog = Initial version
+---
+# Front-Matter for GitHub Workflow
+title: "GitHub Pages Documentation Deployment"
+name: "gh-pages.yml"
+description: "Build & deploy project docs to GitHub Pages via Sphinx & Nox"
+category: workflow
+usage: "Automatically triggered on push to main branch"
+behavior: "Builds documentation and deploys to GitHub Pages"
+inputs: "Source documentation files"
+outputs: "Deployed documentation on GitHub Pages"
+dependencies: "Poetry, Nox, Sphinx"
+author: "LedgerBase Team"
+last_modified: "2023-11-15"
+changelog: "Initial migration to front-matter format"
+tags: [docs, deployment, github-pages]
+---
 
 name: 📚 Build & Deploy Docs
 
 on:
-    push:
-        branches: [main]
+  push:
+    branches: [main]
 
 jobs:
-    docs:
-        runs-on: ubuntu-22.04
-        steps:
-            - name: Checkout repo
-              uses: actions/checkout@v4
+  prepare:
+    name: Prepare Poetry & Assured OSS
+    uses: ./.github/workflows/templates/prepare-poetry.yml
+    with:
+      GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
+    secrets:
+      GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
 
-            - name: Set up Python
-              uses: actions/setup-python@v5
-              with:
-                  python-version: "3.11"
+  docs:
+    name: Build & Deploy Docs
+    needs: prepare
+    runs-on: ubuntu-22.04
 
-            - name: Build & collect docs via Nox
-              run: |
-                  python -m pip install --upgrade pip nox
-                  nox -s build_docs
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-            - name: Deploy to GitHub Pages
-              uses: peaceiris/actions-gh-pages@v3
-              with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_dir: docs/_build/html
-                  publish_branch: gh-pages
-                  user_name: "LedgerBase Bot"
-                  user_email: "ci@ledgerbase.example.com"
+      - name: Verify no public PyPI fallbacks
+        run: poetry run nox -s verify_assured
+
+      - name: Build & collect docs via Nox
+        run: poetry run nox -s build_docs
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/_build/html
+          publish_branch: gh-pages
+          user_name: "LedgerBase Bot"
+          user_email: "ci@ledgerbase.example.com"
