Convert to assured oss

--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -1,4 +1,21 @@
-# .github/workflows/sbom.yml
+---
+# Front-Matter for GitHub Workflow
+
+title: "Security – SBOM"
+name: "sbom.yml"
+description: "Generates and validates Software Bill of Materials (SBOM) for the project"
+category: security
+usage: "Triggered on push, pull request, or manual workflow dispatch"
+behavior: "Generates SBOM in CycloneDX format and validates it"
+inputs: "Project source code and dependencies"
+outputs: "CycloneDX SBOM artifact (docs/generated/sbom/sbom.cdx.json)"
+dependencies: "Poetry, Nox, Trivy, Docker Buildx"
+author: "Byron Williams"
+last_modified: "2023-11-15"
+changelog: "Updated header to match annotation specification"
+tags: [security, sbom, workflow]
+---
+
 name: Security – SBOM
 
 on:
@@ -11,18 +28,25 @@ permissions:
   security-events: write
 
 jobs:
+  # 1. Prepare Poetry & Assured OSS environment (with caching)
+  prepare:
+    uses: ./.github/workflows/templates/prepare-poetry.yml
+    with:
+      GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
+    secrets:
+      GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
+
   sbom:
     name: Generate & Validate SBOM
+    needs: prepare
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf
-        with:
-          egress-policy: audit
-
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Verify no public PyPI fallbacks
+        run: poetry run nox -s verify_assured
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -33,14 +57,11 @@ jobs:
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh \
             | sh -s -- -b /usr/local/bin
 
-      - name: Install Nox
-        run: python -m pip install --upgrade pip nox
-
-      - name: Run SBOM Validate via Nox
-        run: nox -s sbom_validate
+      - name: Run SBOM Validate via Poetry
+        run: poetry run nox -s sbom_validate
 
       - name: Upload SBOM artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: sbom-cyclonedx
           path: docs/generated/sbom/sbom.cdx.json
