Updated to Poetry 2.1.2

--- a/.envrc
+++ b/.envrc
@@ -1,14 +1,28 @@
-# Define the project root for use in .env.dev
-export PROJECT_ROOT=$(pwd)
+# 1) Direnv bootstrap
+eval "$(direnv hook bash)"
 
-# Load base development env
-dotenv ledgerbase_secure_env/.env.dev
+# 2) Decrypt & export Azure SP creds in dotenv form
+SOPS_FILE="${PWD}/.envrc.values.sops.yaml"
+if [ -f "$SOPS_FILE" ]; then
+  TMPFILE="$(mktemp)"
+  sops \
+    --decrypt \
+    --input-type dotenv \
+    --output-type dotenv \
+    "$SOPS_FILE" > "$TMPFILE"
+  source "$TMPFILE"
+  rm -f "$TMPFILE"
 
-# Optionally load local overrides if they exist
-if [ -f ledgerbase_secure_env/.env.local ]; then
-  dotenv ledgerbase_secure_env/.env.local
+  export AZURE_CLIENT_ID \
+         AZURE_TENANT_ID \
+         AZURE_CLIENT_SECRET \
+         AZURE_SUBSCRIPTION_ID
+else
+  echo "⚠️  Missing encrypted creds: $SOPS_FILE" >&2
 fi
 
-if [ -f .env.local ]; then
-  dotenv .env.local
-fi
+# 3) Set Key Vault prefix
+export LEDGERBASE_ENV="${LEDGERBASE_ENV:-dev}"
+
+# 4) Cleanup stray plain .env files
+rm -f ledgerbase_secure_env/.env.dev ledgerbase_secure_env/.env.prod
