--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ Flask-SQLAlchemy = "^3.1.1"
 cryptography = "^44.0.2"
 python-dotenv = "^1.1.0"
 sentry-sdk = { extras = ["flask"], version = "^2.25.1" }
-marshmallow = "^3.21.2"
+marshmallow = "^4.0.0"
 Flask-Limiter = "^3.5.0"
 gunicorn = "^23.0.0"
 psycopg = { version = "^3.1.18", extras = ["binary"] }
@@ -37,14 +37,14 @@ PyYAML = "^6.0.1"
 jinja2 = ">=3.1.6,<3.2.0"
 nox = "^2025.2.9"
 requests = "^2.31.0"
-semgrep = "^1.119.0"
+semgrep = "^1.120.1"
 keyring = "^24.0.0"
 "keyrings.google-artifactregistry-auth" = "^1.1.2"
-packaging = "^23.1"
+packaging = "^25.0"
 
 # Azure Key Vault runtime SDKs
 azure-identity = "^1.16.0"
-azure-keyvault-secrets = "^4.8.0"
+azure-keyvault-secrets = "^4.9.0"
 
 [tool.poetry.group.dev.dependencies]
 # Core testing & linting
@@ -56,6 +56,17 @@ pre-commit = "^4.2.0"
 sqlfluff = "^3.4.0"
 nox = "^2025.2.9"
 
+# Set min version as Assured OSS uses older versions, this forces these to Pypi
+dulwich = ">=0.22.0"
+wrapt   = ">=1.17.2"
+zipp    = ">=3.21.0"
+markupsafe = ">=3.0.2"
+regex       = ">=2024.11.6"
+greenlet    = ">=3.2.1"
+requests-toolbelt = ">=1.0.0"
+sqlalchemy = ">=2.0.40"
+coverage = "^7.8.0"
+
 # Security scanning tools
 bandit = "^1.8.3"
 safety = "^3.4.0"
@@ -65,28 +76,26 @@ bandit-sarif-formatter = "^1.1.1"
 "sarif-tools" = "^3.0.4"
 
 # Documentation tools
-sphinx = "^8.2.0"
-sphinxcontrib-plantuml = "^0.25"
+sphinx = "^8.2.3"
+sphinxcontrib-plantuml = "^0.30"
 readthedocs-sphinx-search = "^0.3.2"
-sphinxcontrib-spelling = "^7.2"
-sphinx-lint = "^0.8"
+sphinxcontrib-spelling = "^8.0.1"
+sphinx-lint = "^1.0.0"
 myst-parser = ">=4.0.1"
 furo = ">=2024.8.6"
 sphinx-copybutton = ">=0.5.2"
 sphinx-autodoc-typehints = ">=3.1.0"
-
-# Other dev utilities
+pyenchant = "^3.2.0"# Other dev utilities
 codespell = "^2.1"
-pip-licenses = "^4.4.0"
+pip-licenses = "^5.0.0"
 python-semantic-release = "^9.21.0"
-twine = "^5.1.0"
+twine = "^6.1.0"
 vulture = "^2.11"
 yamllint = "^1.35.1"
-types-requests = "^2.31.0.10"
+types-requests = "^2.32.0.20250328"
 pathspec = "^0.12.1"
-pydantic = "^2.9.0,<2.10.0"
-poetry-plugin-export = "^1.8.0"
-PyGithub = "^1.59.0"
+pydantic = "^2.9.0,<2.10" #updates cause breaks with safety
+PyGithub = "^2.1.1"
 contourpy = "^1.3.2"
 
 
